--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "sevenaware-v03",
+  "name": "v02-sevenaware",
   "version": "1.9.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/ui-react": "^1.0.2",
+    "@aws-amplify/ui-react": "^1.0.5",
     "@material-ui/core": "4.9.14",
     "@material-ui/icons": "4.9.1",
-    "aws-amplify": "^3.3.20",
+    "aws-amplify": "^3.3.24",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "history": "4.10.1",
