--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "4.9.14",
     "@material-ui/icons": "4.9.1",
     "aws-amplify": "^3.3.24",
+    "aws-amplify-react": "^4.2.28",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "history": "4.10.1",
