--- a/amplify/backend/auth/v02sevenaware105db537/v02sevenaware105db537-cloudformation-template.yml
+++ b/amplify/backend/auth/v02sevenaware105db537/v02sevenaware105db537-cloudformation-template.yml
@@ -144,7 +144,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'v02sevdfa9891e_sns-role', !Join ['',[ 'sns', 'dfa9891e', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'v02sev105db537_sns-role', !Join ['',[ 'sns', '105db537', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -156,10 +156,10 @@ Resources:
               - "sts:AssumeRole"
             Condition:
               StringEquals:
-                sts:ExternalId: v02sevdfa9891e_role_external_id
+                sts:ExternalId: v02sev105db537_role_external_id
       Policies:
         -
-          PolicyName: v02sevdfa9891e-sns-policy
+          PolicyName: v02sev105db537-sns-policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -209,7 +209,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: v02sevdfa9891e_role_external_id
+        ExternalId: v02sev105db537_role_external_id
     
   
   UserPoolClientWeb:
@@ -217,7 +217,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: v02sevdfa9891e_app_clientWeb
+      ClientName: v02sev105db537_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -227,7 +227,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: v02sevdfa9891e_app_client
+      ClientName: v02sev105db537_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -238,7 +238,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'dfa9891e', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '105db537', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -292,7 +292,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: v02sevdfa9891e_userpoolclient_lambda_iam_policy
+      PolicyName: v02sev105db537_userpoolclient_lambda_iam_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -309,7 +309,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: v02sevdfa9891e_userpoolclient_lambda_log_policy
+      PolicyName: v02sev105db537_userpoolclient_lambda_log_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -349,7 +349,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties:
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'v02sevenawaredfa9891e_identitypool_dfa9891e', !Join ['',['v02sevenawaredfa9891e_identitypool_dfa9891e', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'v02sevenaware105db537_identitypool_105db537', !Join ['',['v02sevenaware105db537_identitypool_105db537', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
